--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@react-native-picker/picker": "2.4.0",
     "@rneui/base": "^4.0.0-rc.4",
     "@rneui/themed": "^4.0.0-rc.4",
-    "expo": "~45.0.0",
+    "expo": "^45.0.5",
+    "expo-splash-screen": "~0.15.1",
     "expo-sqlite": "~10.2.0",
     "expo-status-bar": "~1.3.0",
     "patch-package": "^6.4.7",
