--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/stack": "^6.2.1",
     "@rneui/base": "^4.0.0-rc.4",
     "@rneui/themed": "^4.0.0-rc.4",
-    "expo": "~45.0.0",
+    "expo": "^45.0.6",
     "expo-splash-screen": "~0.15.1",
     "expo-sqlite": "~10.2.0",
     "expo-status-bar": "~1.3.0",
